--- a/src/Components/NavMain.css
+++ b/src/Components/NavMain.css
@@ -1,51 +1,18 @@
-/* Shrinking the sidebar from 250px to 80px and center aligining its content*/
-#sidebar.active {
-  min-width: 80px;
-  max-width: 80px;
+.logo {
+  display: flex;
+  justify-content: space-between;
+  color: black;
+  background-color: rgba(211, 211, 211, 0.22);
+}
+
+.logo-burger {
+  width: 10%;
+  height: 10%;
+}
+
+.left-logo {
   text-align: center;
 }
 
-/* Toggling the sidebar header content, hide the big heading [h3] and showing the small heading [strong] and vice versa*/
-#sidebar .sidebar-header strong {
-  display: none;
-}
-#sidebar.active .sidebar-header h3 {
-  display: none;
-}
-#sidebar.active .sidebar-header strong {
-  display: block;
-}
-
-#sidebar ul li a {
-  text-align: left;
-}
-
-#sidebar.active ul li a {
-  padding: 20px 10px;
-  text-align: center;
-  font-size: 0.85em;
-}
-
-#sidebar.active ul li a i {
-  margin-right: 0;
-  display: block;
-  font-size: 1.8em;
-  margin-bottom: 5px;
-}
-
-/* Same dropdown links padding*/
-#sidebar.active ul ul a {
-  padding: 10px !important;
-}
-
-/* Changing the arrow position to bottom center position, 
-   translateX(50%) works with right: 50% 
-   to accurately  center the arrow */
-#sidebar.active .dropdown-toggle::after {
-  top: auto;
-  bottom: 10px;
-  right: 50%;
-  -webkit-transform: translateX(50%);
-  -ms-transform: translateX(50%);
-  transform: translateX(50%);
+.right-logo {
 }
