Third merge Elise

--- a/src/Components/NavMain.css
+++ b/src/Components/NavMain.css
@@ -14,5 +14,13 @@
   text-align: center;
 }
 
-.right-logo {
+.icones {
+  display: flex;
+  width: 20%;
+  margin: auto 0;
+  justify-content: space-evenly;
+}
+
+.icones i {
+  width: 20px;
 }
