--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,8 @@
 .col {
   flex-direction: column;
 }
+
+.button {
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-size: 25px;
+}
