--- a/src/style/Aliment.css
+++ b/src/style/Aliment.css
@@ -1,9 +1,8 @@
-.item {
+.menu {
   padding: 20px 30px;
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: 30vh 30vh 30vh 30vh;
-  width: 100vh;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .menu-case {
@@ -16,8 +15,57 @@
   box-shadow: 12px 12px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
+.menu-case-ali {
+  border: 2px solid red;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 230px;
+  padding: 10px;
+  align-items: center;
+  box-shadow: 12px 12px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
 .price-plus {
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
+}
+
+.renderall {
+  width: 75%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.big-container {
+  display: flex;
+  width: 100%;
+}
+
+.asideRecap {
+  height: 100%;
+  width: 20%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  background-color: lightblue;
+  overflow-x: hidden;
+  padding-top: 20px;
+  margin-top: 150px;
+}
+
+.menu-case p {
+  padding: 0;
+  margin: 0 auto;
+  text-align: center;
+}
+
+button {
+  color: white;
+  border-radius: 5px;
+  border: none;
+  background-color: #ff8080;
 }
