--- a/src/style/MenuPage.css
+++ b/src/style/MenuPage.css
@@ -22,7 +22,39 @@
 }
 
 .renderall {
+  width: 75%;
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.big-container {
+  display: flex;
+  width: 100%;
+}
+
+.asideRecap {
+  height: 100%;
+  width: 20%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  background-color: lightblue;
+  overflow-x: hidden;
+  padding-top: 20px;
+  margin-top: 150px;
+}
+
+.menu-case p {
+  padding: 0;
+  margin: 0 auto;
+  text-align: center;
+}
+
+button {
+  color: white;
+  border-radius: 5px;
+  border: none;
+  background-color: #ff8080;
 }
