--- a/src/style/App.css
+++ b/src/style/App.css
@@ -10,3 +10,10 @@
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   font-size: 25px;
 }
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: medium;
+  font-style: oblique;
+}
