--- a/src/style/Aliment.css
+++ b/src/style/Aliment.css
@@ -5,16 +5,6 @@
   grid-template-columns: 1fr 1fr 1fr;
 }
 
-.menu-case {
-  border: 2px solid red;
-  border-radius: 20px;
-  display: flex;
-  flex-direction: column;
-  padding: 10px;
-  align-items: center;
-  box-shadow: 12px 12px 2px 1px rgba(0, 0, 0, 0.2);
-}
-
 .menu-case-ali {
   border: 2px solid red;
   border-radius: 20px;
@@ -32,40 +22,8 @@
   justify-content: space-between;
 }
 
-.renderall {
-  width: 75%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.big-container {
-  display: flex;
-  width: 100%;
-}
-
-.asideRecap {
-  height: 100%;
-  width: 20%;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  right: 0;
-  background-color: lightblue;
-  overflow-x: hidden;
-  padding-top: 20px;
-  margin-top: 150px;
-}
-
-.menu-case p {
+.menu-case-ali p {
   padding: 0;
   margin: 0 auto;
   text-align: center;
-}
-
-button {
-  color: white;
-  border-radius: 5px;
-  border: none;
-  background-color: #ff8080;
 }
