--- a/src/style/Aliment.css
+++ b/src/style/Aliment.css
@@ -1,4 +1,4 @@
-.menu {
+/* .menu {
   padding: 20px 30px;
   display: grid;
   grid-gap: 20px;
@@ -26,4 +26,4 @@
   padding: 0;
   margin: 0 auto;
   text-align: center;
-}
+} */
