--- a/src/style/MenuPage.css
+++ b/src/style/MenuPage.css
@@ -1,35 +1,64 @@
+@import url("https://fonts.googleapis.com/css?family=PT+Sans+Narrow&display=swap");
+
 .menu {
   padding: 20px 30px;
   display: grid;
-  grid-gap: 20px;
+  grid-row-gap: 40px;
   grid-template-columns: 1fr 1fr 1fr;
 }
 
+.alim{
+  padding: 20px 30px;
+  display: grid;
+  grid-row-gap: 40px;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
 .menu-case {
-  border: 2px solid red;
-  border-radius: 20px;
+  border-color: rgb(115, 115, 115);
+  border-style: solid;
+  border-width: 0 2px 2px 0;
+  border-bottom: 0;
+  /* border-radius: 20px; */
   display: flex;
   flex-direction: column;
   padding: 10px;
   align-items: center;
-  box-shadow: 12px 12px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.menu-case-ali {
+  border-color: rgb(115, 115, 115);
+  border-style: solid;
+  border-width: 0 2px 2px 0;
+  border-bottom: 0;
+  /* border-radius: 20px; */
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  align-items: center;
+}
+
+.menu-case-ali img{
+  width:13em
 }
 
 .price-plus {
   display: flex;
-  align-items: flex-end;
+  flex-direction: column;
+  height: 50px;
+  align-items: center;
   justify-content: space-between;
 }
 
 .renderall {
-  width: 75%;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
 .big-container {
-  display: flex;
+  display: grid;
+  grid-template-columns: 80% 20%;
   width: 100%;
 }
 
@@ -40,21 +69,47 @@
   z-index: 1;
   top: 0;
   right: 0;
-  background-color: lightblue;
+  background-color: rgba(47, 158, 247,0.2);
   overflow-x: hidden;
   padding-top: 20px;
   margin-top: 150px;
+  font-family: "PT Sans Narrow", sans-serif;
 }
 
 .menu-case p {
   padding: 0;
   margin: 0 auto;
-  text-align: center;
+  text-align: justify;
+  margin-bottom: 20px;
 }
 
 button {
   color: white;
+  width: 150px;
+  font-size: 20px;
+  font-weight: bold;
+  font-family: "PT Sans Narrow", sans-serif;
   border-radius: 5px;
   border: none;
-  background-color: #ff8080;
+  text-shadow: grey 2px 2px;
+  background-color: rgb(241, 181, 0);
+}
+
+.renderall h1 {
+  text-align: center;
+  font-size: 50px;
+  font-family: "PT Sans Narrow", sans-serif;
+  color: rgb(176, 5, 0);
+  font-weight: bold;
+  text-shadow: grey 2px 2px;
+}
+
+.description {
+  width: 300px;
+}
+
+.display-price{
+  display:flex;
+  flex-direction:column;
+  padding-left:7px
 }
