--- a/src/style/NavMain.css
+++ b/src/style/NavMain.css
@@ -7,13 +7,13 @@
   color: white;
   display: flex;
   justify-content: space-between;
-  background-color: rgba(211, 211, 211, 0.22);
+  background-color: rgb(47, 158, 247);
   height: 12%;
   width: 100%;
   position: fixed;
   z-index: 1;
+  box-shadow: 0 4px lightgray;
   top: 0;
-  background-color: rgb(204, 162, 162);
   overflow-x: hidden;
 }
 
@@ -31,6 +31,16 @@
 
 .left-logo {
   text-align: center;
+  margin: auto;
+}
+.left-logo h1 {
+  margin: auto;
+  font-size: 50px;
+}
+
+.left-logo p {
+  margin: auto;
+  font-size: 20px;
 }
 
 .icones {
