--- a/src/style/NavMain.css
+++ b/src/style/NavMain.css
@@ -10,7 +10,7 @@
   background-color: rgb(47, 158, 247);
   height: 12%;
   width: 100%;
-  position: fixed;
+  /* position: fixed; */
   z-index: 1;
   box-shadow: 0 4px lightgray;
   top: 0;
